--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
             </div>
             <div class="next">
                 <h1>Texel</h1>
-                <p>I have been working on the design of the website for Hotel Den Burg. This hotel is located in a prime location on Texel, one of the four largest islands in the Netherlands. My task was to create the entire design from scratch, which I accomplished using Figma.
+                <p>I have been working on the design of the website for Hotel Den Burg, located in a prime location on Texel, one of the four largest islands in the Netherlands. My task was to create the entire design from scratch, utilizing Figma for the development process.
+
                 The website design reflects the hotel's commitment to quality and hospitality, providing users with an intuitive and visually appealing platform to explore and book their stay.</p>
                     <a href="https://www.hoteldenburg.com/en/">See the website <i class="fa-solid fa-arrow-right"></i></a>
             </div>
