--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <a href="#" onclick="replaceContent(event)">Explore more Amsterdam Inn <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="next">
-                <h1>Amsterdam Inn</h1>
+                <h1>Ams Inn</h1>
                 <p>
                     I have been working on implementing the front-end design for the Amsterdam Inn Hotel website. I effectively brought the provided design to life using PHP, a WordPress theme, SCSS for styling, and JavaScript for interactive elements.
                     
