--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <a href="#" onclick="replaceContent(event)">Explore more animations <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="next">
-                <h1>Motion Designs</h1>
+                <h1>Animation</h1>
                 <p>
                     I've been a freelance 2D motion designer for over three years, specializing in Adobe After Effects for crafting motion graphics and animations, Adobe Illustrator for vector design and refinement, Adobe Photoshop for image editing and composition, and Adobe Premiere Pro for video editing and post-production. These tools enable me to create dynamic visual content, integrating animations and effects seamlessly into cohesive projects across various digital platforms. Please check out my videos via the link below! </p>
                     <a href="https://youtube.com/playlist?list=PL1Ye8BpPotiGq0NKixR5H1fsXTA4SdD4f&si=dN3medl2bC0ik36r">See the animations <i class="fa-solid fa-arrow-right"></i></a>
