--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
 
 
     <div class="icons">
-        <a href="mailto:Amralina.Diana@gmail.com"><img src="assets/email.png" alt="Email"></a>
-        <a href="https://www.instagram.com/di.kooooo/"><img src="assets/insta.png" alt="Instagram"></a>
-        <a href="https://wa.me/+31645021967"><img src="assets/what'sapp.png" alt="WhatsApp"></a>
+        <a href="mailto:Amralina.Diana@gmail.com"><img src="assets/email.svg" alt="Email"></a>
+        <a href="https://www.instagram.com/di.kooooo/"><img src="assets/insta.svg" alt="Instagram"></a>
+        <a href="https://wa.me/+31645021967"><img src="assets/what'sapp.svg" alt="WhatsApp"></a>
     </div>
 
     <script src="main.js"></script>
