--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="content" id="content2">
             <div class="previous">
-                <img src="assets/sencilia.gif" alt="">
+                <img src="assets/encolor.gif" alt="">
                 <a href="#" onclick="replaceContent(event)">Explore more <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="next">
