--- a/index.html
+++ b/index.html
@@ -101,13 +101,8 @@
             </div>
             <div class="next">
                 
-                <h1>Sencilia App</h1>
-                <p>Sencilia's 'Flow sensors' are designed to alleviate nurses' workload by providing precise flow rate
-                    information. The objective was to develop user-friendly healthcare software for nurses,
-                    incorporating expert reviews, interviews, and iterative design. The final prototype, refined through
-                    desk research and user testing, successfully meets both client and nurse requirements. It
-                    efficiently transmits sensor data, includes notification alarms for critical situations, and
-                    organizes application levels for enhanced usability.</p>
+                <h1>Encolor</h1>
+                <p>My role was to design and develop from scratch the full layout, design the assets, and work on the illustrations that bring the site to life. While designing, I kept a specific type of user in mind—this guided my choices for colors, visuals, and overall style. The goal was to make the website not only functional, but also approachable and engaging for the people it’s meant for.</p>
                 <a href="https://xd.adobe.com/view/a712fd1a-19b2-47b8-7707-09ead8f37e21-d123/">See the design<i class="fa-solid fa-arrow-right"></i> </a>
             </div>
         </div>
