--- a/index.html
+++ b/index.html
@@ -102,7 +102,15 @@
             <div class="next">
                 
                 <h1>Encolor</h1>
-                <p>My role was to design and develop from scratch the full layout, design the assets, and work on the illustrations that bring the site to life. While designing, I kept a specific type of user in mind—this guided my choices for colors, visuals, and overall style. The goal was to make the website not only functional, but also approachable and engaging for the people it’s meant for.</p>
+                <p>My role was to design and develop from scratch the full layout, design the assets, 
+                and work on the illustrations that bring the site to life. While designing, 
+                I kept a specific type of user in mind—this guided my choices for colors, visuals, and overall style. 
+                The goal was to make the website not only functional, but also approachable and engaging for the people it’s meant for.
+                One of the main challenges was representing an RGB table in a way that still felt clean and easy to use. 
+                I wanted the technical details to be clear, but without overwhelming the design. 
+                Finding that balance between accuracy and simplicity was a big part of the creative process, 
+                and it shaped a lot of my decisions along the way.
+                </p>
                 <a href="https://xd.adobe.com/view/a712fd1a-19b2-47b8-7707-09ead8f37e21-d123/">See the design<i class="fa-solid fa-arrow-right"></i> </a>
             </div>
         </div>
