--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 Finding that balance between accuracy and simplicity was a big part of the creative process, 
                 and it shaped a lot of my decisions along the way.
                 </p>
-                <a href="https://xd.adobe.com/view/a712fd1a-19b2-47b8-7707-09ead8f37e21-d123/">See the design<i class="fa-solid fa-arrow-right"></i> </a>
+                <a href="https://encolor.com/">See the website<i class="fa-solid fa-arrow-right"></i> </a>
             </div>
         </div>
         <div class="content" id="content3">
