--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="next">
                 
                 <h1>Encolor</h1>
-                <p>My role was to design and develop from scratch the full layout, design the assets, 
+                <p>My role was to design and develop from scratch the full layout
                 and work on the illustrations that bring the site to life. While designing, 
                 I kept a specific type of user in mind—this guided my choices for colors, visuals, and overall style. 
                 The goal was to make the website not only functional, but also approachable and engaging for the people it’s meant for.
