--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
             <div class="next">
                 
                 <h1>Encolor</h1>
-                <p>My role was to design and develop from scratch the full layout
-                and work on the illustrations that bring the site to life. While designing, 
-                I kept a specific type of user in mind—this guided my choices for colors, visuals, and overall style. 
+                <p>In this project, I was responsible for designing and developing the entire layout from scratch, as well as creating the illustrations that bring the site to life.
                 The goal was to make the website not only functional, but also approachable and engaging for the people it’s meant for.
                 One of the main challenges was representing an RGB table in a way that still felt clean and easy to use. 
                 Finding that balance between accuracy and simplicity was a big part of the creative process, 
