--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href='https://fonts.googleapis.com/css?family=Bungee Inline' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alumni Sans' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;700&family=Space+Grotesk:wght@700&display=swap' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&family=Karla:wght@400;700&family=Righteous&display=swap' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -72,19 +75,13 @@
                     <p>o</p>
                 </div>
                 <div class="segment" data-content="content6">
-                    <p>M</p>
-                    <p>o</p>
-                    <p>t</p>
-                    <p>i</p>
+                    <p>C</p>
                     <p>o</p>
                     <p>n</p>
-                </div>
-                <div class="segment" data-content="content7">
-                    <p>G</p>
-                    <p>a</p>
-                    <p>m</p>
-                    <p>e</p>
                     <p>s</p>
+                    <p>o</p>
+                    <p>l</p>
+                    <p>e</p>
                 </div>
             </div>
 
@@ -156,29 +153,17 @@
         </div>
         <div class="content" id="content6">
             <div class="previous">
-                <img src="assets/motion.gif" alt="">
-                <a href="#" onclick="replaceContent(event)">Explore more animations <i class="fa-solid fa-arrow-right"></i></a>
+                <img src="assets/Console.gif" alt="">
+                <a href="#" onclick="replaceContent(event)">Explore more Console <i class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="next">
-                <h1>Animation</h1>
+                <h1>Console</h1>
                 <p>
-                    I've been a freelance 2D motion designer for over three years, specializing in Adobe After Effects for crafting motion graphics and animations, Adobe Illustrator for vector design and refinement, Adobe Photoshop for image editing and composition, and Adobe Premiere Pro for video editing and post-production. These tools enable me to create dynamic visual content, integrating animations and effects seamlessly into cohesive projects across various digital platforms. Please check out my videos via the link below! </p>
-                    <a href="https://youtube.com/playlist?list=PL1Ye8BpPotiGq0NKixR5H1fsXTA4SdD4f&si=dN3medl2bC0ik36r">See the animations <i class="fa-solid fa-arrow-right"></i></a>
+                I designed a single design system used across all lighting controller devices. The system is currently being rolled out to five products, ensuring consistency across platforms. <br> <br> As the only designer on the team, I owned the full design process, including defining UX patterns, making UI decisions, and collaborating with engineers. The solution was tested with users and iterated based on feedback to improve the overall experience. <br> <br>
+                <a> Work shown is limited due to confidentiality </a>
             </div>
         </div>
-        <div class="content" id="content7">
-            <div class="previous">
-                <img src="assets/games.gif" alt="">
-                <a href="#" onclick="replaceContent(event)">Explore more Games <i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-            <div class="next">
-                <h1>Games</h1>
-                <p>
-                   
-                    I have been studying game design and specialize in Unity for both 2D and 3D games. As a C# Unity programmer, I also possess skills in 3D art using Blender. Throughout my studies, I have worked on over eight game development projects, honing my abilities in game programming, design, and 3D modeling. These experiences have given me a solid understanding of game development pipelines and a passion for creating immersive gameplay experiences. Working on these games has improved my teamwork skills.</p>
-                    <a href="https://youtube.com/playlist?list=PL1Ye8BpPotiGxoAxd8x-bWR2-7Iy4UBVf&si=8uMpZmQKfyJW8ynA">Check all games<i class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </div>
+
     </div>
     <div class="content-display" id="contentDisplay">Content</div>
     <div class="rotate-me">Scroll down</div>
@@ -195,3 +180,4 @@
 </body>
 
 </html>
+
